src/test/ui/layout/issue-96185-overaligned-enum.stderr
error: layout_of(Aligned1) = Layout {
           fields: Arbitrary {
               offsets: [
                   Size(0 bytes),
               ],
               memory_index: [
                   0,
               ],
           },
           variants: Multiple {
               tag: Initialized {
                   value: Int(
                       I8,
                       false,
                   ),
                   valid_range: 0..=1,
               },
               tag_encoding: Direct,
               tag_field: 0,
               variants: [
                   Layout {
                       fields: Arbitrary {
                           offsets: [],
                           memory_index: [],
                       },
                       variants: Single {
                           index: 0,
                       },
                       abi: Aggregate {
                           sized: true,
                       },
                       largest_niche: None,
                       align: AbiAndPrefAlign {
                           abi: Align(8 bytes),
                           pref: $PREF_ALIGN,
                       },
                       size: Size(8 bytes),
                   },
                   Layout {
                       fields: Arbitrary {
                           offsets: [],
                           memory_index: [],
                       },
                       variants: Single {
                           index: 1,
                       },
                       abi: Aggregate {
                           sized: true,
                       },
                       largest_niche: None,
                       align: AbiAndPrefAlign {
                           abi: Align(8 bytes),
                           pref: $PREF_ALIGN,
                       },
                       size: Size(8 bytes),
                   },
               ],
           },
           abi: Aggregate {
               sized: true,
           },
           largest_niche: Some(
               Niche {
                   offset: Size(0 bytes),
                   value: Int(
                       I8,
                       false,
                   ),
                   valid_range: 0..=1,
               },
           ),
           align: AbiAndPrefAlign {
               abi: Align(8 bytes),
               pref: $PREF_ALIGN,
           },
           size: Size(8 bytes),
       }
  --> $DIR/issue-96185-overaligned-enum.rs:8:1
   |
LL | pub enum Aligned1 {
   | ^^^^^^^^^^^^^^^^^

error: layout_of(Aligned2) = Layout {
           fields: Arbitrary {
               offsets: [
                   Size(0 bytes),
               ],
               memory_index: [
                   0,
               ],
           },
           variants: Multiple {
               tag: Initialized {
                   value: Int(
                       I8,
                       false,
                   ),
                   valid_range: 0..=1,
               },
               tag_encoding: Direct,
               tag_field: 0,
               variants: [
                   Layout {
                       fields: Arbitrary {
                           offsets: [],
                           memory_index: [],
                       },
                       variants: Single {
                           index: 0,
                       },
                       abi: Aggregate {
                           sized: true,
                       },
                       largest_niche: None,
                       align: AbiAndPrefAlign {
                           abi: Align(1 bytes),
                           pref: $PREF_ALIGN,
                       },
                       size: Size(1 bytes),
                   },
                   Layout {
                       fields: Arbitrary {
                           offsets: [],
                           memory_index: [],
                       },
                       variants: Single {
                           index: 1,
                       },
                       abi: Aggregate {
                           sized: true,
                       },
                       largest_niche: None,
                       align: AbiAndPrefAlign {
                           abi: Align(1 bytes),
                           pref: $PREF_ALIGN,
                       },
                       size: Size(1 bytes),
                   },
               ],
           },
           abi: Scalar(
               Initialized {
                   value: Int(
                       I8,
                       false,
                   ),
                   valid_range: 0..=1,
               },
           ),
           largest_niche: Some(
               Niche {
                   offset: Size(0 bytes),
                   value: Int(
                       I8,
                       false,
                   ),
                   valid_range: 0..=1,
               },
           ),
           align: AbiAndPrefAlign {
               abi: Align(1 bytes),
               pref: $PREF_ALIGN,
           },
           size: Size(1 bytes),
       }
  --> $DIR/issue-96185-overaligned-enum.rs:16:1
   |
LL | pub enum Aligned2 {
   | ^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

